--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^7.1.1",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-window": "^1.8.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
