Update tsconfig.json to include node configuration and remove composite option

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -14,6 +14,7 @@
     "moduleResolution": "Bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
+    "composite": true,
     "noEmit": true,
     "jsx": "react-jsx",
     "verbatimModuleSyntax": true
